# ailab-cloud

./: README.md  pyproject.toml
ailab_cloud/: auth.py  config.py  main.py  proxy.py  tunnel.py
ailab_cloud/templates/: base.html  dashboard.html  login.html
snap/: snapcraft.yaml
snap/hooks/: configure
snap/local/: ailab-cloud-wrapper  caddy-wrapper  redis-wrapper
