[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ailab-cloud"
dynamic = ["version"]
description = "Secure tunnel hub for remote access to AI Lab home devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
keywords = ["ailab", "tunnel", "websocket", "proxy", "github-oauth"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ailab-cloud = "ailab_cloud.main:app"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["ailab_cloud*"]
